Melhoras na Página Principal

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="Recursos/logo.png" width="300" height="400" class="p-6 pb-8 drop-shadow-xl">
         <form>
             <label style="font-family: 'Roboto', sans-serif;">Usuário</label><br>
-            <input class="drop-shadow-xl rounded-lg bg-white/100 border-zinc-600 focus:outline-none focus:border-sky-700 focus:ring-1 focus:ring-sky-700 px-2 py-1" type="text">
+            <input autofocus class="drop-shadow-xl rounded-lg bg-white/100 border-zinc-600 focus:outline-none focus:border-sky-700 focus:ring-1 focus:ring-sky-700 px-2 py-1" type="text">
             <br><br>
             <label style="font-family: 'Roboto', sans-serif;">Senha</label><br>
             <input class="drop-shadow-xl rounded-lg bg-white/100 border-zinc-600 focus:outline-none focus:border-sky-700 focus:ring-1 focus:ring-sky-700 px-2 py-1" type="password">
